Fix some bugs for the build.

--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -30,6 +30,7 @@ sourceSets {
 }
 
 dependencies {
+  implementation project(path: ':core')
   java9Implementation files([sourceSets.main.output.classesDirs]) {
      builtBy compileJava
   }
