--- a/util/build.gradle
+++ b/util/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 
   implementation project(':prov')
   implementation files("${lts_prov}")
+  implementation project(path: ':core')
+  implementation project(path: ':prov')
   testImplementation group: 'junit', name: 'junit', version: '4.11'
 
   java9Implementation project(':prov')
