Added java tests back

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,17 @@
 stages:
-  #- test
+  - test
   - testAVX
   - testVAES
   - testVAESF
 
 
-
-# test-java-code:
-#   stage: test
-#   script:
-#     - "apply_overlay bc-java ./"
-#     - "sh gettestdata.sh"
-#     - . cienv-11.sh
-#     - "./gradlew clean withNative prov:build util:build pg:build pkix:build tls:build mail:build"
+test-java-code:
+  stage: test
+  script:
+    - "apply_overlay bc-java ./"
+    - "sh gettestdata.sh"
+    - . cienv-11.sh
+    - "./gradlew clean withNative prov:build util:build pg:build pkix:build tls:build mail:build"
 
 
 test-code-avx:
