--- a/core/build.gradle
+++ b/core/build.gradle
@@ -62,21 +62,32 @@ task cleanNative(type: Delete) {
 }
 
 
-jar {
-  from sourceSets.main.output
-  into('native') {
-    from '../native_c/target'
-  }
-  manifest.attributes('Multi-Release': 'true')
+
+task withNative() {
+    doLast {
+
+        if (directoryExists("$rootDir/native_c/target/linux/x86_64/probe")) {
+            copyDirContent("$rootDir/native_c/target/linux/x86_64/probe", "$projectDir/src/main/resources/native/linux/x86_64/probe")
+        }
+
+        if (directoryExists("$rootDir/native_c/target/linux/x86_64/sse")) {
+            copyDirContent("$rootDir/native_c/target/linux/x86_64/sse", "$projectDir/src/main/resources/native/linux/x86_64/sse")
+        }
+
+        if (directoryExists("$rootDir/native_c/target/linux/x86_64/avx")) {
+            copyDirContent("$rootDir/native_c/target/linux/x86_64/avx", "$projectDir/src/main/resources/native/linux/x86_64/avx")
+        }
+
+        if (directoryExists("$rootDir/native_c/target/linux/x86_64/vaes")) {
+            copyDirContent("$rootDir/native_c/target/linux/x86_64/vaes", "$projectDir/src/main/resources/native/linux/x86_64/vaes")
+        }
+
+        if (directoryExists("$rootDir/native_c/target/linux/x86_64/vaesf")) {
+            copyDirContent("$rootDir/native_c/target/linux/x86_64/vaesf", "$projectDir/src/main/resources/native/linux/x86_64/vaesf")
+        }
+
+    }
 }
 
-artifacts {
-  archives jar
-  archives javadocJar
-  archives sourcesJar
-}
 
-task('copyJars', type:Copy) {
-  from new File(projectDir,"build/libs")
-  into new File(rootDir,"jars")
-}
+
