--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ test-java-code:
     - "apply_overlay bc-java ./"
     - "sh gettestdata.sh"
     - . cienv-11.sh
-    - "./gradlew clean cleanNative prov:build util:build pg:build pkix:build tls:build mail:build"
+    - "./gradlew clean cleanNative withNative prov:build util:build pg:build pkix:build tls:build mail:build"
 
 
 test-code-avx:
@@ -23,7 +23,7 @@ test-code-avx:
     - "mkdir -p /tmp/bcfipslibs"
     - . cienv-11.sh
     - "./gradlew clean core:compileJava; cd native_c; ./build_linux.sh;  cd .."
-    - "./gradlew clean cleanNative prov:build util:build pg:build pkix:build tls:build mail:build copyJars -x test"
+    - "./gradlew clean cleanNative withNative prov:build util:build pg:build pkix:build tls:build mail:build copyJars -x test"
     - "tmpLibDir=$(mktemp -d -t bc-jni-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=avx -cp jars/bcprov-lts8on-`./version.sh`.jar org.bouncycastle.util.DumpInfo"
@@ -38,7 +38,7 @@ test-code-vaes:
     - "mkdir -p /tmp/bcfipslibs"
     - . cienv-11.sh
     - "./gradlew clean core:compileJava; cd native_c; ./build_linux.sh; cd .."
-    - "./gradlew clean cleanNative prov:build util:build pg:build pkix:build tls:build mail:build copyJars -x test"
+    - "./gradlew clean cleanNative withNative prov:build util:build pg:build pkix:build tls:build mail:build copyJars -x test"
     - "tmpLibDir=$(mktemp -d -t bc-jni-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=vaes -cp jars/bcprov-lts8on-`./version.sh`.jar org.bouncycastle.util.DumpInfo"
@@ -53,7 +53,7 @@ test-code-vaesf:
     - "mkdir -p /tmp/bcfipslibs"
     - . cienv-11.sh
     - "./gradlew clean core:compileJava;  cd native_c; ./build_linux.sh; cd .."
-    - "./gradlew clean cleanNative prov:build util:build pg:build pkix:build tls:build mail:build copyJars -x test"
+    - "./gradlew clean cleanNative withNative prov:build util:build pg:build pkix:build tls:build mail:build copyJars -x test"
     - "tmpLibDir=$(mktemp -d -t bc-jni-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=vaesf -cp jars/bcprov-lts8on-`./version.sh`.jar org.bouncycastle.util.DumpInfo"
