Added JVM env vars using the same mechanism as the FIPS api.
The build script will look for the following environmental variables:

LTS_JDK8,LTS_JDK11 and LTS_JDK15

These variables can be defined, for example, in your system or in your user terminal rc file.

For example on OSX using zsh:

in file ~/.zshrc

Add:

export LTS_JDK8=/path/to/jdk8_home
export LTS_JDK11=/path/to/jdk11_home
export LTS_JDK15=/path/to/jdk15_home

For development use OpenJDK.

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 
+
 import static ExtraFunctions.propValsAsArgs
 
 buildscript {
@@ -15,6 +16,17 @@ plugins {
   id "jacoco"
   id "java"
 }
+
+println("Environment setup:")
+["LTS_JDK8", "LTS_JDK11", "LTS_JDK15"].each({ it ->
+  println("Looking for JDK ENV '${it}' found  ${System.getenv(it)}");
+  if (System.getenv(it) == null) {
+    throw new RuntimeException("Looking for JDK ENV '${it}' but found null, see README 'Environmental variables'");
+  }
+})
+
+
+
 
 if (JavaVersion.current().isJava8Compatible())
 {
