--- a/build.gradle
+++ b/build.gradle
@@ -150,6 +150,23 @@ subprojects {
   sourceCompatibility = "$vm_source"
   targetCompatibility = "$vm_target"
 
+  task('testNEON', type: Test) {
+    systemProperty 'bc.test.data.home', bcTestDataHome
+    maxHeapSize = "2048m"
+    testLogging.showStandardStreams = true
+    testLogging.showCauses = true
+    testLogging.showExceptions = true
+    testLogging.showStackTraces = true
+
+    filter {
+      includeTestsMatching "AllTest*"
+    }
+    jvmArgs '-Dtest.bcfips.ignore.native=sha,gcm,cbc,es,cfb,ctr', '-Dorg.bouncycastle.native.library_path=/tmp/bc-jni-libs', '-Dorg.bouncycastle.native.cpu_variant=neon'
+
+  }
+
+
+
   task('testVAESF', type: Test) {
     systemProperty 'bc.test.data.home', bcTestDataHome
     maxHeapSize = "2048m"
