--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
+org.gradle.java.installations.auto-download=false
 org.gradle.java.installations.fromEnv=LTS_JDK8,LTS_JDK11,LTS_JDK15
-version=2.73.0
+version=2.74.0-SNAPSHOT
 org.gradle.jvmargs=-Xmx2g
 
