--- a/core/build.gradle
+++ b/core/build.gradle
@@ -62,9 +62,10 @@ task cleanNative(type: Delete) {
     delete("$projectDir/src/main/resources/META-INF/DRIVERS");
 }
 
+
 task('copyJars', type:Copy) {
     from new File(projectDir,"build/libs")
-    into new File(rootDir,"jars")
+    into new File(rootDir,"../bc-lts-java-jars/${version}/")
 }
 
 task withNative() {
