--- a/jmail/build.gradle
+++ b/jmail/build.gradle
@@ -110,7 +110,7 @@ artifacts {
 }
 
 task('copyJars', type:Copy) {
-  from new File(projectDir,"build/libs")
-  into new File(rootDir,"jars")
+    from new File(projectDir,"build/libs")
+    into new File(rootDir,"../bc-lts-java-jars/${version}/")
 }
 
