--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -131,6 +131,6 @@ artifacts {
 }
 
 task('copyJars', type:Copy) {
-  from new File(projectDir,"build/libs")
-  into new File(rootDir,"jars")
+    from new File(projectDir,"build/libs")
+    into new File(rootDir,"../bc-lts-java-jars/${version}/")
 }
