--- a/util/build.gradle
+++ b/util/build.gradle
@@ -81,6 +81,5 @@ artifacts {
 
 task('copyJars', type:Copy) {
   from new File(projectDir,"build/libs")
-  into new File(rootDir,"jars")
+  into new File(rootDir,"../bc-lts-java-jars/${version}/")
 }
-
