--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.java.installations.auto-download=false
 org.gradle.java.installations.fromEnv=LTS_JDK8,LTS_JDK11,LTS_JDK15
-version=2.73.1-SNAPSHOT
+version=2.73.1
 org.gradle.jvmargs=-Xmx2g
 
