--- a/native_c/CMakeLists.txt
+++ b/native_c/CMakeLists.txt
@@ -77,8 +77,7 @@ if ((${CMAKE_SYSTEM_PROCESSOR} STREQUAL "arm64") OR (${CMAKE_SYSTEM_PROCESSOR} S
         set(PLATFORM_TARGET ${NATIVE_INSTALL_ROOT}/darwin/arm64)
         set(OPTIONS -Wconversion)
         set(PROBE_OPTIONS ${OPTIMISE_FLAG})
-        set(ARM64_NEON_OPTIONS ${OPTIMISE_FLAG})
-
+        set(ARM64_NEON_OPTIONS ${OPTIONS} ${OPTIMISE_FLAG})
 
     elseif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
         message("Detected Linux")
@@ -86,7 +85,7 @@ if ((${CMAKE_SYSTEM_PROCESSOR} STREQUAL "arm64") OR (${CMAKE_SYSTEM_PROCESSOR} S
         set(PLATFORM_TARGET ${NATIVE_INSTALL_ROOT}/linux/arm64)
         set(OPTIONS -Wconversion)
         set(PROBE_OPTIONS ${OPTIMISE_FLAG})
-        set(ARM64_NEON_OPTIONS -Wconversion -march=armv8.4-a+crypto ${OPTIMISE_FLAG})
+        set(ARM64_NEON_OPTIONS ${OPTIONS} -march=armv8.4-a+crypto ${OPTIMISE_FLAG})
         set(ARM_BE -mbig-endian)
     endif ()
 
