--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -134,3 +134,16 @@ task('copyJars', type:Copy) {
     from new File(projectDir,"build/libs")
     into new File(rootDir,"../bc-lts-java-jars/${version}/")
 }
+
+test {
+    testLogging.showStandardStreams = true
+    testLogging.showCauses = true
+    testLogging.showExceptions = true
+    testLogging.showStackTraces = true
+
+
+    jvmArgs '-Dtest.bcfips.ignore.native=sha,gcm,cbc,ecb,es,cfb,ctr', '-Dorg.bouncycastle.native.cpu_variant=java'
+
+
+
+}
