Added back detection and printing JVM env vars. Turned off error for missing resource directories.

--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,13 @@ plugins {
   id "java"
 }
 
-//println("Environment setup:")
-//["LTS_JDK8", "LTS_JDK11", "LTS_JDK15"].each({ it ->
-//  println("Looking for JDK ENV '${it}' found  ${System.getenv(it)}");
-//  if (System.getenv(it) == null) {
-//    throw new RuntimeException("Looking for JDK ENV '${it}' but found null, see README 'Environmental variables'");
-//  }
-//})
-
+println("Environment setup:")
+["LTS_JDK8", "LTS_JDK11", "LTS_JDK15"].each({ it ->
+  println("Looking for JDK ENV '${it}' found  ${System.getenv(it)}");
+  if (System.getenv(it) == null) {
+    throw new RuntimeException("Looking for JDK ENV '${it}' but found null, see README 'Environmental variables'");
+  }
+})
 
 
 
